@@ -538,3 +538,116 @@ def isspecific(mypkg):
 	iscache[mypkg]=0
 	return 0
 
+def match_to_list(mypkg,mylist):
+	"""(pkgname,list)
+	Searches list for entries that matches the package.
+	"""
+	matches=[]
+	for x in mylist:
+		if match_from_list(x,[mypkg]):
+			if x not in matches:
+				matches.append(x)
+	return matches
+
+def best_match_to_list(mypkg,mylist):
+	"""(pkgname,list)
+	Returns the most specific entry (assumed to be the longest one)
+	that matches the package given.
+	"""
+	# XXX Assumption is wrong sometimes.
+	maxlen = 0
+	bestm  = None
+	for x in match_to_list(mypkg,mylist):
+		if len(x) > maxlen:
+			maxlen = len(x)
+			bestm  = x
+	return bestm
+
+
+
+def match_from_list(mydep,candidate_list):
+	if mydep[0] == "!":
+		mydep = mydep[1:]
+
+	mycpv     = dep_getcpv(mydep)
+	mycpv_cps = portage_versions.catpkgsplit(mycpv) # Can be None if not specific
+
+	if not mycpv_cps:
+		cat,pkg = portage_versions.catsplit(mycpv)
+		ver     = None
+		rev     = None
+	else:
+		cat,pkg,ver,rev = mycpv_cps
+		if mydep == mycpv:
+			raise KeyError, "Specific key requires an operator (%s) (try adding an '=')" % (mydep)
+
+	if ver and rev:
+		operator = get_operator(mydep)
+		if not operator:
+			writemsg("!!! Invanlid atom: %s\n" % mydep)
+			return []
+	else:
+		operator = None
+
+	mylist = []
+
+	if operator == None:
+		for x in candidate_list:
+			xs = portage_versions.pkgsplit(x)
+			if xs == None:
+				if x != mycpv:
+					continue
+			elif xs[0] != mycpv:
+				continue
+			mylist.append(x)
+
+	elif operator == "=": # Exact match
+		if mycpv in candidate_list:
+			mylist = [mycpv]
+	
+	elif operator == "=*": # glob match
+		# The old verion ignored _tag suffixes... This one doesn't.
+		for x in candidate_list:
+			if x[0:len(mycpv)] == mycpv:
+				mylist.append(x)
+
+	elif operator == "~": # version, any revision, match
+		for x in candidate_list:
+			xs = portage_versions.catpkgsplit(x)
+			if xs[0:2] != mycpv_cps[0:2]:
+				continue
+			if xs[2] != ver:
+				continue
+			mylist.append(x)
+
+	elif operator in [">", ">=", "<", "<="]:
+		for x in candidate_list:
+			try:
+				result = portage_versions.pkgcmp(portage_versions.pkgsplit(x), [cat+"/"+pkg,ver,rev])
+			except SystemExit, e:
+				raise
+			except:
+				writemsg("\nInvalid package name: %s\n" % x)
+				sys.exit(73)
+			if result == None:
+				continue
+			elif operator == ">":
+				if result > 0:
+					mylist.append(x)
+			elif operator == ">=":
+				if result >= 0:
+					mylist.append(x)
+			elif operator == "<":
+				if result < 0:
+					mylist.append(x)
+			elif operator == "<=":
+				if result <= 0:
+					mylist.append(x)
+			else:
+				raise KeyError, "Unknown operator: %s" % mydep
+	else:
+		raise KeyError, "Unknown operator: %s" % mydep
+	
+
+	return mylist
+				
